@@ -6,8 +6,11 @@ apport (0.98) UNRELEASED; urgency=low
     #1, that generates a huge amount of spam. Use another test bug.
   * apport/crashdb_impl/launchpad.py, download(): Use Bug.description_raw,
     since LP mangles spaces in .description. Bump p-lp-bugs dependency.
+  * apport/crashdb_impl/launchpad.py, close_duplicate(): Explicitly set the
+    duplicate after removing attachments, since the new LP does not allow any
+    modification of duplicate bugs.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 10 Sep 2007 16:16:58 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 10 Sep 2007 16:32:56 +0200
 
 apport (0.97) gutsy; urgency=low
 
